Fixed: Z-Index issue

--- a/task-manager-app/client/src/index.css
+++ b/task-manager-app/client/src/index.css
@@ -495,7 +495,6 @@ video {
 
 .app{
   position: relative;
-  z-index: 10;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 8rem;
@@ -827,7 +826,7 @@ video {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 100;
+  z-index: 9999;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.25);
